added set_FIERCE_workspace function and updated documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,5 +12,6 @@ export(plot_entropy_results)
 export(plot_signature_statistics)
 export(plot_velocity)
 export(save_h5ad)
+export(set_FIERCE_workspace)
 exportPattern("^[[:alpha:]]+")
 importFrom(magrittr,"%>%")
