--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,4 +14,4 @@ export(plot_velocity)
 export(save_h5ad)
 export(set_FIERCE_workspace)
 exportPattern("^[[:alpha:]]+")
-importFrom(magrittr,)
+importFrom(magrittr,"%>%")
